Archive2/8f/4f27c934b8c855/output
main.cpp:6:18: error: no member named 'equal_range' in 'std::list<int, std::allocator<int> >'
    auto ret = l.equal_range(5);
               ~ ^
1 error generated.
